@@ -69,7 +69,7 @@ public class QuadTreeTestAdd extends QuadTreeTest
 		{
 			u = rand.nextDouble();
 			v = rand.nextDouble();
-			Vertex2D pt = (Vertex2D) m.factory.createVertex(u, v);
+			Vertex2D pt = (Vertex2D) m.createVertex(u, v);
 			r.quadtree.add(pt);
 		}
 		//CheckCoordProcedure checkproc = new CheckCoordProcedure();
@@ -87,7 +87,7 @@ public class QuadTreeTestAdd extends QuadTreeTest
 					double [] xyz = view.getLastClick();
 					if (null != xyz)
 					{
-						Vertex2D vt = (Vertex2D) m.factory.createVertex(xyz[0], xyz[1]);
+						Vertex2D vt = (Vertex2D) m.createVertex(xyz[0], xyz[1]);
 						r.quadtree.add(vt);
 						view.removeAllBranchGroup();
 						display(view, r);
